--- a/app/views/parties/show.html.erb
+++ b/app/views/parties/show.html.erb
@@ -2,4 +2,5 @@
 <h3><%= @party.address %></h3>
 <h3><%= @party.time %></h3>
 
-<h2>Hosts</h2>
+<h2>Host</h2>
+<h3><%= link_to @party.host, user_path(@party.host) %></h3>
