--- a/app/views/parties/index.html.erb
+++ b/app/views/parties/index.html.erb
@@ -2,7 +2,8 @@
 <%= @parties.all.each do |party| %>
   <h2><%= link_to party.name, party_path(party) %></h2>
   <ul>
-    <li><%= party.address%></li>
-    <li><%=party.time%></li>
+    <li><%= party.host.name if party.host %></li>
+    <li><%= party.address %></li>
+    <li><%= party.time %></li>
   </ul>
 <%end%>
