parties#index shows parties divided into new/old

--- a/app/views/parties/index.html.erb
+++ b/app/views/parties/index.html.erb
@@ -1,5 +1,16 @@
 <h1>Parties!</h1>
-<%= @parties.all.each do |party| %>
+<h2>Upcoming Parties</h2>
+<% @parties.all.each do |party| %>
+  <h2><%= link_to party.name, party_path(party) %></h2>
+  <ul>
+    <li>Host: <%= link_to party.host.name, user_path(party.host) %></li>
+    <li><%= party.address %></li>
+    <li><%= party.display_time %></li>
+    <li><%= party.attendees.count %> attendees</li>
+  </ul>
+<%end%>
+<h2>Past Parties</h2>
+<% @old_parties.all.each do |party| %>
   <h2><%= link_to party.name, party_path(party) %></h2>
   <ul>
     <li>Host: <%= link_to party.host.name, user_path(party.host) %></li>
