Added dishes link in user profile

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,3 +8,4 @@
 </ul>
 
 <h3><%= link_to "Parties Attended/Attending", user_attended_parties_path(@user)%></h3>
+<h3><%= link_to "Dishes Brought", user_dishes_path(@user)%></h3>
