--- a/app/views/parties/index.html.erb
+++ b/app/views/parties/index.html.erb
@@ -1,5 +1,16 @@
 <h1>Parties!</h1>
 <h4><%= link_to "Host a Party", new_party_path %></h4>
+<% if @hosted_parties != [] %>
+<h2>Hosted Parties</h2>
+<% @hosted_parties.each do |party| %>
+  <h2><%= link_to party.name, party_path(party) %></h2>
+  <ul>
+    <li><%= party.address %></li>
+    <li><%= party.display_time %></li>
+    <li><%= party.attendees.count %> attendees</li>
+  </ul>
+<%end%>
+<% end %>
 <h2>Upcoming Parties</h2>
 <% @parties.all.each do |party| %>
   <h2><%= link_to party.name, party_path(party) %></h2>
