user cannot see party unless they are invited

--- a/app/views/parties/index.html.erb
+++ b/app/views/parties/index.html.erb
@@ -1,4 +1,7 @@
 <h1>Parties!</h1>
+<% if flash[:notice] %>
+    <div class="notice"><%= flash[:notice] %></div>
+  <% end %>
 <h4><%= link_to "Host a Party", new_party_path %></h4>
 <% if @hosted_parties != [] %>
 <h2>Hosted Parties</h2>
