create a new dish for a party

--- a/app/views/parties/show.html.erb
+++ b/app/views/parties/show.html.erb
@@ -13,6 +13,7 @@
 </ul>
 
 <h2>Dishes</h2>
+<p><%= link_to "Add a New Dish", new_party_dish_path(@party) %></p>
 <ul>
   <% if @apps != [] %>
     <li><h4>Appetizers<h4></li>
